Revert some removed words

--- a/_posts/2009-02-28-little-javaつづき.html
+++ b/_posts/2009-02-28-little-javaつづき.html
@@ -3,7 +3,7 @@ layout: post
 title: Little Javaつづき
 ---
 
-<p>巻末のYSchemeで書いてみた。</p>
+<p>巻末のYコンビネータ、同じものをSchemeで書いてみた。</p>
 <pre class="code lang-scheme" data-lang="scheme" data-unlink><span class="synSpecial">(</span><span class="synStatement">define</span> G
   <span class="synSpecial">(</span><span class="synStatement">lambda</span> <span class="synSpecial">(</span>h<span class="synSpecial">)</span>
     <span class="synSpecial">(</span><span class="synStatement">lambda</span> <span class="synSpecial">(</span>x<span class="synSpecial">)</span>
