Revert some more removed words

--- a/_posts/2009-02-21-little-java.html
+++ b/_posts/2009-02-21-little-java.html
@@ -3,7 +3,9 @@ layout: post
 title: Little Java
 ---
 
-<p><a href="http://www.ccs.neu.edu/home/matthias/BALJ/">http://www.ccs.neu.edu/home/matthias/BALJ/</a></p><p>amazon.co.ukはDVDが激安と話題になったけど、本だと配送料がPer Item2.99ポンド、Per Delivery4.99ポンド掛かって割安感はあまりなかったようです。</p><p>Forwordに</p>
+<p><a href="http://www.ccs.neu.edu/home/matthias/BALJ/">http://www.ccs.neu.edu/home/matthias/BALJ/</a></p>
+
+<p>amazon.co.jpに在庫が無くてamazon.co.ukに注文していたものが到着。amazon.co.ukはDVDが激安と話題になったけど、本だと配送料がPer Item2.99ポンド、Per Delivery4.99ポンド掛かって割安感はあまりなかったようです。</p><p>Forwordに</p>
 
     <blockquote>
         <p>If you know functional design, the book will gently introduce you to pattern-based programming in Java. </p>
@@ -15,4 +17,4 @@ title: Little Java
         <p>An introductory computer science course that uses Scheme (or ML) is the best way to get familiar with this style of design, but it is not required. </p>
 
     </blockquote>
-<p>とあるように、SchemerのためのCompositeパターン, Visitorパターン, Factory Methodパターンなどが説明されているらしい。 </p>
+<p>とあるように、SchemerのためのJavaとデザインパターンの本。Interpreterパターン, Compositeパターン, Visitorパターン, Factory Methodパターンなどが説明されているらしい。 </p>
