--- a/_posts/2015-05-29-iftttからzapierに変更.html
+++ b/_posts/2015-05-29-iftttからzapierに変更.html
@@ -9,7 +9,7 @@ title: iftttからzapierに変更
 
 <p>iftttだとwebhookが公式にサポートされていないのと、ifttt.captnemo.inがホストされているHerokuの無料プランが改定されて安定して運用されるか分からない(無料プランだと日に7時間スリープしてしまう)のがあったので、zapierに移行しました。</p>
 
-<p>移行と言っても、zapierにはwebhookのトリガーが用意されているので、以下のリンクからZapbookを作成して、rssとCircleCIのwebhookのURLを登録するだけで作成できました。</p>
+<p>移行と言っても、zapierにはwebhookのトリガーが用意されているので、以下のリンクからZapbookを作成して、githubのrssとCircleCIのwebhookのURLを登録するだけで作成できました。</p>
 
 <p><a href="https://zapier.com/zapbook/zaps/1746/send-a-webhook-when-an-rss-feed-is-updated/">Send a webhook when an RSS feed is updated - RSS and Webhook Integrations - Zapbook - Zapier</a></p>
 
