--- a/_posts/2015-06-23-overtone.html
+++ b/_posts/2015-06-23-overtone.html
@@ -5,9 +5,9 @@ title: Overtone
 
 <p>先日、<a href="https://atnd.org/events/67224">Sapporo.clj#5 : ATND</a>に参加して、Overtoneを試してみました。</p>
 
-<p><a href="https://overtone.github.io/">Overtone</a>はSuperColliderをエンジンに使用しています。</p>
+<p><a href="https://overtone.github.io/">Overtone</a>はClojure上で動作する音響合成プログラミング言語で、<a href="https://supercollider.github.io/">SuperCollider</a>をエンジンに使用しています。</p>
 
-<p>以下、Overtoneをインストールして、Piano Phaseを鳴らすところまでの手順です。</p>
+<p>以下、Overtoneをインストールして、Steve Reichの<a href="https://ja.wikipedia.org/wiki/%E3%83%94%E3%82%A2%E3%83%8E%E3%83%BB%E3%83%95%E3%82%A7%E3%82%A4%E3%82%BA#.E7.AC.AC1.E3.81.AE.E9.83.A8.E5.88.86">Piano Phase</a>を鳴らすところまでの手順です。</p>
 
 <h3>Leiningenのインストール</h3>
 
