--- a/_posts/2015-08-30-shadertone.html
+++ b/_posts/2015-08-30-shadertone.html
@@ -9,7 +9,7 @@ title: Shadertone
 
 <p><a href="http://yoppa.org/blog/6232.html">Shadertoneで遊んでみた - 導入編</a></p>
 
-<p>あと、当日その場で紹介できなかったですが、Emacs LiveとShadertoneを使っているようですね。</p>
+<p>あと、当日その場で紹介できなかったですが、Joseph Wilk氏のワークショップでのライブコーディング(19:00-)がクールだったので貼り付けておきます。Emacs LiveとShadertoneを使っているようですね。</p>
 
 <p><iframe width="480" height="270" src="https://www.youtube.com/embed/pJ5oVqZ9BgY?feature=oembed" frameborder="0" allowfullscreen></iframe></p>
 
