--- a/_posts/2015-05-17-heroku-dockerでcontext-free-art-playground作った.html
+++ b/_posts/2015-05-17-heroku-dockerでcontext-free-art-playground作った.html
@@ -11,7 +11,7 @@ title: Heroku DockerでContext Free Art Playground作った
 
 <p>サーバーサイドでcfdgを動かしてレンダリングしています。</p>
 
-<p>cfdgのようなコマンドは一般的なPaaSでは動かすこと難しいので、今回のHerokuのDocker対応で実現できました。</p>
+<p>cfdgのようなコマンドは一般的なPaaSでは動かすことが難しいので、今回のHerokuのDocker対応で実現できました。</p>
 
 <p>Heroku以外にもDockerがカジュアルに使える場所が増えると良いですね。</p>
 
